# bugtest

./: CMakeLists.txt
webslice/: metadata.desktop
webslice/contents/ui/: main.qml
